<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_waiver"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:id="@+id/txtPrintName"
                    android:hint="@string/hint_printname"
                    android:layout_weight="0.3"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:id="@+id/txtInitials"
                    android:hint="@string/hint_initial"
                    android:layout_weight="0.3"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:id="@+id/txtWitnessName"
                    android:hint="@string/hint_witnessname"
                    android:layout_weight="0.3"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>